feat: enhance AC control system stability and features
- Fix power-off mode handling logic
- Add support for multiple auto modes
- Implement persistent fan speed control
- Optimize ESP32-C3/S3 board support
- Enhance memory management and error handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,43 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1-n16r8v]
+[platformio]
+default_envs = esp32-c3-super-mini
+
+[extra]
+baud = 115200
+
+[env]
+; platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
 platform = espressif32
-board = esp32-s3-devkitc-1-n16r8v
 framework = arduino
-lib_deps = homespan/HomeSpan@1.9.1
-monitor_speed = 115200
+monitor_speed = ${extra.baud}
+lib_deps = 
+	homespan/HomeSpan@^2.1.0
+	bbx10/DNSServer@^1.1.0
 build_flags = 
-    -I include
+	-I include
+	-DARDUINO_USB_CDC_ON_BOOT=1
+
+[env:esp32-s3-devkitc-1-n16r8v]
+board = esp32-s3-devkitc-1
+build_flags = 
+	${env.build_flags}
+	-DBOARD_HAS_PSRAM
+
+[env:esp32-c3-super-mini]
+board = lolin_c3_mini
+board_build.flash_mode = dio
+board_build.flash_size = 4MB
+board_build.partitions = partitions_custom.csv
+build_flags = 
+	${env.build_flags}
+	-DESP32C3_SUPER_MINI
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
+
+[env:esp32-s3-super-mini]
+board = esp32-s3-fh4r2
+build_flags = 
+	${env.build_flags}
+	-DESP32S3_SUPER_MINI
