--- a/platformio.ini
+++ b/platformio.ini
@@ -1,12 +1,4 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+; Simplified PlatformIO configuration focusing on ESP32-C3 SuperMini
 
 [platformio]
 default_envs = esp32-c3-supermini
@@ -15,287 +7,43 @@ default_envs = esp32-c3-supermini
 baud = 115200
 
 [env]
-; platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
 platform = espressif32
 framework = arduino
 monitor_speed = ${extra.baud}
-lib_deps = 
-	homespan/HomeSpan@^2.1.0
-	bbx10/DNSServer@^1.1.0
-	links2004/WebSockets@^2.4.0
-	bblanchon/ArduinoJson@^7.0.0
-build_flags = 
-	-I include
-	-I include/architecture_v3
-	-std=c++17
-	-DV3_ARCHITECTURE_ENABLED
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DENABLE_REMOTE_DEBUG
-
-[env:esp32-s3-devkitc-1-n16r8v]
-board = esp32-s3-devkitc-1
+lib_deps =
+    homespan/HomeSpan@^2.1.0
+    bbx10/DNSServer@^1.1.0
+    bblanchon/ArduinoJson@^7.0.0
+build_flags =
+    -I include
+    -I include/architecture_v3
+    -std=c++17
+    -DV3_ARCHITECTURE_ENABLED
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DESP32C3_SUPER_MINI
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_LOOP_STACK_SIZE=8192
+    -DCONFIG_FREERTOS_UNICORE=1
+    -DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
+    -Os
+    -ffunction-sections
+    -fdata-sections
+    -Wl,--gc-sections
+    -DCORE_DEBUG_LEVEL=1
+    -DPRODUCTION_BUILD
 board_build.partitions = partitions_custom.csv
-board_build.flash_size = 16MB
-build_flags = 
-	${env.build_flags}
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-
-; =============================================================================
-; ESP32-S3 USB 燒錄環境（預設）
-; 使用方法: pio run -e esp32-s3-usb -t upload
-; =============================================================================
-[env:esp32-s3-usb]
-board = esp32-s3-devkitc-1
-board_build.partitions = partitions_custom.csv
-board_build.flash_size = 16MB
-upload_protocol = esptool
-build_flags = 
-	${env.build_flags}
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-
-; =============================================================================
-; ESP32-S3 OTA 燒錄環境
-; 使用方法: pio run -e esp32-s3-ota -t upload
-; 注意：需要先設定正確的IP地址
-; =============================================================================
-[env:esp32-s3-ota]
-board = esp32-s3-devkitc-1
-board_build.partitions = partitions_custom.csv
-board_build.flash_size = 16MB
-upload_protocol = espota
-upload_port = 192.168.50.192
-upload_flags = --auth=12345678
-build_flags = 
-	${env.build_flags}
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-
-; =============================================================================
-; ESP32-C3-SuperMini USB 燒錄環境
-; 使用方法: pio run -e esp32-c3-supermini-usb -t upload
-; =============================================================================
-[env:esp32-c3-supermini-usb]
-board = lolin_c3_mini
 board_build.flash_mode = dio
 board_build.flash_size = 4MB
-board_build.partitions = partitions_custom.csv
-upload_protocol = esptool
-build_flags = 
-	${env.build_flags}
-	-DESP32C3_SUPER_MINI
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-	-Os
-	-ffunction-sections
-	-fdata-sections
-	-Wl,--gc-sections
-	-DCORE_DEBUG_LEVEL=1
 
-; =============================================================================
-; ESP32-C3-SuperMini USB 燒錄環境（無模擬功能測試）
-; 使用方法: pio run -e esp32-c3-supermini-usb-no-sim -t upload
-; =============================================================================
-[env:esp32-c3-supermini-usb-no-sim]
-board = lolin_c3_mini
-board_build.flash_mode = dio
-board_build.flash_size = 4MB
-board_build.partitions = partitions_custom.csv
-upload_protocol = esptool
-build_flags = 
-	${env.build_flags}
-	-DESP32C3_SUPER_MINI
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-	-Os
-	-ffunction-sections
-	-fdata-sections
-	-Wl,--gc-sections
-	-DCORE_DEBUG_LEVEL=1
-	-DDISABLE_SIMULATION_MODE
-	-DDISABLE_MOCK_CONTROLLER
-
-; =============================================================================
-; ESP32-C3-SuperMini 生產環境（記憶體優化）
-; 使用方法: pio run -e esp32-c3-supermini-production -t upload
-; =============================================================================
-[env:esp32-c3-supermini-production]
-board = lolin_c3_mini
-board_build.flash_mode = dio
-board_build.flash_size = 4MB
-board_build.partitions = partitions_custom.csv
-upload_protocol = esptool
-build_flags = 
-	-I include
-	-I include/architecture_v3
-	-std=c++17
-	-DV3_ARCHITECTURE_ENABLED
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DESP32C3_SUPER_MINI
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-	-Os
-	-ffunction-sections
-	-fdata-sections
-	-Wl,--gc-sections
-	-DCORE_DEBUG_LEVEL=1
-	-DPRODUCTION_BUILD
-	-DDISABLE_SIMULATION_MODE
-	-DDISABLE_MOCK_CONTROLLER
-
-; =============================================================================
-; ESP32-C3-SuperMini 生產環境 OTA 燒錄
-; 使用方法: pio run -e esp32-c3-supermini-production-ota -t upload
-; =============================================================================
-[env:esp32-c3-supermini-production-ota]
-board = lolin_c3_mini
-board_build.flash_mode = dio
-board_build.flash_size = 4MB
-board_build.partitions = partitions_custom.csv
-upload_protocol = espota
-upload_port = 192.168.50.192
-upload_flags = --auth=12345678
-build_flags = 
-	-I include
-	-I include/architecture_v3
-	-std=c++17
-	-DV3_ARCHITECTURE_ENABLED
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DESP32C3_SUPER_MINI
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-	-Os
-	-ffunction-sections
-	-fdata-sections
-	-Wl,--gc-sections
-	-DCORE_DEBUG_LEVEL=1
-	-DPRODUCTION_BUILD
-	-DDISABLE_SIMULATION_MODE
-	-DDISABLE_MOCK_CONTROLLER
-
-; =============================================================================
-; ESP32-C3-SuperMini 輕量級調試環境
-; 使用方法: pio run -e esp32-c3-supermini-lightweight -t upload
-; =============================================================================
-[env:esp32-c3-supermini-lightweight]
-board = lolin_c3_mini
-board_build.flash_mode = dio
-board_build.flash_size = 4MB
-board_build.partitions = partitions_custom.csv
-upload_protocol = esptool
-build_flags = 
-	-I include
-	-I include/architecture_v3
-	-std=c++17
-	-DV3_ARCHITECTURE_ENABLED
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DESP32C3_SUPER_MINI
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-	-Os
-	-ffunction-sections
-	-fdata-sections
-	-Wl,--gc-sections
-	-DCORE_DEBUG_LEVEL=1
-	-DENABLE_LIGHTWEIGHT_DEBUG
-
-; =============================================================================
-; ESP32-C3-SuperMini OTA 燒錄環境
-; 使用方法: pio run -e esp32-c3-supermini-ota -t upload
-; 注意：需要先設定正確的IP地址
-; =============================================================================
-[env:esp32-c3-supermini-ota]
-board = lolin_c3_mini
-board_build.flash_mode = dio
-board_build.flash_size = 4MB
-board_build.partitions = partitions_custom.csv
-upload_protocol = espota
-upload_port = 192.168.50.192
-upload_flags = --auth=12345678
-build_flags = 
-	${env.build_flags}
-	-DESP32C3_SUPER_MINI
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-
-; =============================================================================
-; ESP32-S3-SuperMini USB 燒錄環境
-; 使用方法: pio run -e esp32-s3-supermini-usb -t upload
-; =============================================================================
-[env:esp32-s3-supermini-usb]
-board = lolin_s3_mini
-board_build.partitions = partitions_custom.csv
-board_build.flash_size = 16MB
-upload_protocol = esptool
-build_flags = 
-	${env.build_flags}
-	-DESP32S3_SUPER_MINI
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-
-; =============================================================================
-; ESP32-S3-SuperMini OTA 燒錄環境
-; 使用方法: pio run -e esp32-s3-supermini-ota -t upload
-; 注意：需要先設定正確的IP地址
-; =============================================================================
-[env:esp32-s3-supermini-ota]
-board = lolin_s3_mini
-board_build.partitions = partitions_custom.csv
-board_build.flash_size = 16MB
-upload_protocol = espota
-upload_port = 192.168.50.192
-upload_flags = --auth=12345678
-build_flags = 
-	${env.build_flags}
-	-DESP32S3_SUPER_MINI
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
-
-; =============================================================================
-; 相容性環境（保留舊名稱）
-; =============================================================================
 [env:esp32-c3-supermini]
 board = lolin_c3_mini
-board_build.flash_mode = dio
-board_build.flash_size = 4MB
-board_build.partitions = partitions_custom.csv
-build_flags = 
-	${env.build_flags}
-	-DESP32C3_SUPER_MINI
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_USB_CDC_ON_BOOT=1
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
+upload_protocol = esptool
 
-[env:esp32-s3-supermini]
-board = lolin_s3_mini
-board_build.partitions = partitions_custom.csv
-board_build.flash_size = 16MB
-build_flags = 
-	${env.build_flags}
-	-DESP32S3_SUPER_MINI
-	-DARDUINO_LOOP_STACK_SIZE=8192
-	-DCONFIG_FREERTOS_UNICORE=1
-	-DCONFIG_ESP32_WIFI_TASK_STACK_SIZE=4096
+[env:esp32-c3-supermini-ota]
+board = lolin_c3_mini
+upload_protocol = espota
+upload_port = 192.168.50.239
+upload_flags = --auth=12345678
+build_flags =
+    ${env.build_flags}
+    -DENABLE_OTA_UPDATE
