Add HomeKit swing control

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,8 @@ baud = 115200
 platform = espressif32
 framework = arduino
 monitor_speed = ${extra.baud}
+platform_packages =
+    framework-arduinoespressif32@https://codeload.github.com/espressif/arduino-esp32/zip/refs/tags/3.1.1
 lib_deps =
     homespan/HomeSpan@^2.1.0
     bbx10/DNSServer@^1.1.0
